2012-08-07  No'am Rosenthal  <noam.rosenthal@nokia.com>

        GraphicsLayerAnimation shouldn't use HashMap<String>
        https://bugs.webkit.org/show_bug.cgi?id=93284

        Reviewed by Kenneth Rohde Christiansen.

        Apply the changes to GraphicsLayerAnimation API.

        * WebProcess/WebPage/CoordinatedGraphics/CoordinatedGraphicsLayer.cpp:
        (WebCore::CoordinatedGraphicsLayer::addAnimation):

2012-08-07  No'am Rosenthal  <noam.rosenthal@nokia.com>

        [Qt] Make it possible to build without QtQuick

        Reviewed by Simon Hausmann.

        * Target.pri:
        * UIProcess/API/qt/tests/tests.pri:
        * UIProcess/API/qt/tests/util.cpp:
        * UIProcess/API/qt/tests/util.h:
        * UIProcess/qt/WebFullScreenManagerProxyQt.cpp:
        (WebKit::WebFullScreenManagerProxy::invalidate):
        (WebKit::WebFullScreenManagerProxy::enterFullScreen):
        (WebKit::WebFullScreenManagerProxy::exitFullScreen):
        * UIProcess/qt/WebPageProxyQt.cpp:
        (WebKit::WebPageProxy::resolveApplicationSchemeRequest):
        (WebKit::WebPageProxy::sendApplicationSchemeReply):
        * WebKit2.pri:

2012-07-19  Simon Hausmann  <simon.hausmann@nokia.com>

        [Qt] Remove Qt 4 specific code paths
        https://bugs.webkit.org/show_bug.cgi?id=88161

        Reviewed by Kenneth Rohde Christiansen.

        * UIProcess/API/qt/qquickwebview.cpp:
        * UIProcess/API/qt/tests/publicapi/tst_publicapi.cpp:
        (gatherAPI):
        * WebKit2.pri:

2012-08-07  Mikhail Pozdnyakov  <mikhail.pozdnyakov@intel.com>

        [EFL][WK2] Add back forward list API
        https://bugs.webkit.org/show_bug.cgi?id=92345

        Reviewed by Kenneth Rohde Christiansen.

        Added new Back Forward list API to EFL WK2. Ewk_Back_Forward_List and
        Ewk_Back_Forward_List_Item structures were added. The new API is
        mostly the same as one from UIProcess/API/C/{ WKBackForwardList.h, WKBackForwardListItem.h }.
